fixed scroll snapping on iOS @TODO: check if it works ^^

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -6,11 +6,12 @@
   src: url("~assets/fonts/Kano.otf") format("truetype")
 
 html
+  overflow-y: scroll
+  -webkit-overflow-scrolling: touch
   scroll-snap-type: y mandatory
 
 section
   scroll-snap-align: end
-  -webkit-overflow-scrolling: touch
 
 body, input, textarea,  button
   font-family: "Kano", sans-serif
